--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   text-decoration: none;
   font-family: "Raleway", "Roboto", sans-serif;
   font-size: 18px;
-  color: 4D5AE5;
+  color: #4d5ae5;
   line-height: 1.6667;
   font-weight: 700;
 }
