--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,31 @@
 body {
-  font-family: "Roboto", "Raleway", sans-serif;
-  color: #2e2f42;
+  font-family: "Roboto", sans-serif;
+  color: #434455;
   background-color: #ffffff;
 }
 
 .logo-link {
   text-decoration: none;
-  font-family: "Raleway", "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   color: #4d5ae5;
   line-height: 1.6667;
   font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .logo-link-second-part {
   text-decoration: none;
-  font-family: "Raleway", "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
   color: #2e2f42;
   line-height: 1.6667;
   font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .page-nav {
@@ -32,6 +38,7 @@ body {
   color: #2e2f42;
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .page-nav .link:hover {
@@ -44,6 +51,7 @@ body {
   color: #2e2f42;
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.02em;
 }
 
 .page-nav .link-studio:hover {
@@ -64,6 +72,8 @@ body {
   color: #434455;
   text-decoration: none;
   line-height: 1.5;
+  font-style: normal;
+  letter-spacing: 0.02em;
 }
 
 .contact-list .contact:hover,
