fix mistakes in first section

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,9 @@ address {
   font-size: 56px;
   color: #ffffff;
   line-height: 1.07143;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 
 .order-service {
@@ -110,11 +113,13 @@ address {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
 }
 
-.order-service:hover {
+.order-service:hover,
+.order-service:focus {
   background-color: #404bbf;
-  cursor: pointer;
 }
 
 .advantages-list {
