--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ body {
   letter-spacing: 0.02em;
 }
 
-.page-nav .link:hover {
+.page-nav .link:hover,
+.page-nav .link:focus {
   color: #404bbf;
 }
 
@@ -112,6 +113,13 @@ address {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.advantages-list .explain-advantage {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .member {
