fix mistakes in third section

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,8 @@ address {
 .advantages-list .explain-advantage {
   line-height: 1.5;
   letter-spacing: 0.02em;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .member {
@@ -129,6 +131,10 @@ address {
 .member-title {
   font-size: 36px;
   line-height: 1.11111;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .member-list {
@@ -143,6 +149,7 @@ address {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .member-text {
