--- a/css/styles.css
+++ b/css/styles.css
@@ -117,9 +117,7 @@ address {
   color: #2e2f42;
 }
 
-.advantages-list .explain-advantage {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+.advantages-list .explain-advantages {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -130,7 +128,7 @@ address {
 
 .member-title {
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -150,12 +148,14 @@ address {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .member-text {
   color: #434455;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.5
+  letter-spacing: 0.02em
 }
 
 .example-list {
