--- a/css/styles.css
+++ b/css/styles.css
@@ -154,8 +154,8 @@ address {
 .member-text {
   color: #434455;
   font-size: 16px;
-  line-height: 1.5
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
+  line-height: 1.5;
 }
 
 .example-list {
