fix mistakes in fourth section

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,15 @@ address {
   line-height: 1.5;
 }
 
+.example-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
 .example-list {
   list-style-type: none;
 }
@@ -170,11 +179,14 @@ address {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .example-text {
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .bottom-page {
